syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "org.ostelco.ocs.api";

// OCS Service
service OcsService {
  rpc CreditControlRequest (stream CreditControlRequestInfo) returns (stream CreditControlAnswerInfo) {}
  rpc Activate (ActivateRequest) returns (stream ActivateResponse) {}
}

message UserEquipmentInfo {
  string imeisv = 1;
}

message ServiceUnit {
  uint64 totalOctets = 1;
  uint64 inputOctets = 2;
  uint64 outputOctetes = 3;
}

enum FinalUnitAction {
  TERMINATE = 0;
  REDIRECT = 1;
  RESTRICT_ACCESS = 2;
}

enum Action {
  PERMIT = 0;
  DENY = 1;
}

enum Dir {
  IN = 0;
  OUT = 1;
}

message IPFilererRule {
  Action action = 1;
  Dir dir = 2;
  string proto = 3;
  string host = 4;
}

enum RedirectAddressType {
  IPV4_ADDRESS = 0;
  IPV6_ADDRESS = 1;
  URL = 2;
  SIP_URL = 3;
}

enum CreditControlRequestType {
  NONE = 0;
  INITIAL_REQUEST = 1;
  UPDATE_REQUEST = 2;
  TERMINATION_REQUEST = 3;
  EVENT_REQUEST = 4;
}

message RedirectServer {
  RedirectAddressType redirectAddressType = 1;
  string redirectServerAddress = 2;
}

message FinalUnitIndication {
  FinalUnitAction finalUnitAction = 1;
  repeated IPFilererRule restrictionFilterRule = 2;
  repeated string filterId = 3;
  RedirectServer redirectServer = 4;
}

message MultipleServiceCreditControl {
    uint64 serviceIdentifier = 1;
    uint64 ratingGroup = 2;
    ServiceUnit requested = 3;
    ServiceUnit used = 4;
    ServiceUnit granted = 5;
    FinalUnitIndication finalUnitIndication = 6;
    uint32 validityTime = 7;
}

message PsInformation {
  string calledStationId = 1;
  string sgsnMccMnc = 2;
}

message ServiceInfo {
  PsInformation psInformation = 1;
}

message CreditControlRequestInfo {
  CreditControlRequestType type = 1;
  string requestId = 2;
  string msisdn = 3;
  string imsi = 4;
  repeated MultipleServiceCreditControl mscc = 5;
  ServiceInfo serviceInformation = 6;
}

message CreditControlAnswerInfo {
  string requestId = 1;
  string msisdn = 2;
  repeated MultipleServiceCreditControl mscc = 3;
}


message ActivateRequest {
}

message ActivateResponse {
  string msisdn = 1;
}

// This is used only to report to Analytics engine by Prime via Google Cloud Pub/Sub.
// This may be moved to a separate library project, in future.
message DataTrafficInfo {
  string msisdn = 1;
  uint64 bucketBytes = 2;
  uint64 bundleBytes = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message AggregatedDataTrafficInfo {
  string msisdn = 1;
  uint64 dataBytes = 2;
  string dateTime = 3;
}